fc-scan: fccache.c:794: FcCacheFini: Assertion `fcCacheChains[i] == NULL' failed.
I don’t know if it’s bad or not, but lately I've been often hitting
fc-scan: fccache.c:794: FcCacheFini: Assertion `fcCacheChains[i] == NULL' failed.`
(That seems to go away the next time I run fc-scan)
fontconfig-2.13.92-6.fc32.2.x86_64
Edited by Nicolas Mailhot